# st-experiment-template

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
st_experiment_template/: __init__.py  cfg.yaml  demo.yaml  main.py
st_experiment_template/experiment/: __init__.py  dev_block.py  example_block.py
st_experiment_template/experiment/demo/: demo.yaml  example_block.py  example_vis_block.py
st_experiment_template/experiment/examples/: example_block.py
st_experiment_template/experiment/report/: __init__.py  report_template.ipynb
st_experiment_template/experiment/vis/: __init__.py  example_vis_block.py
st_experiment_template/utils/: __init__.py  aws_s3.py  logger.py
tests/unit/: test_cfg.yaml  test_main.py
